--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.25.0
 transformers==4.30.0
 torch==2.0.1
-whisper @ git+https://github.com/openai/whisper.git
 numpy==1.25.2
 pandas==2.0.3
+# whisper can cause issues when installed from GitHub, so try the PyPI version:
+openai-whisper==20230314
