--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+langchain==0.1.14
+openai==1.30.1
+tiktoken==0.6.0
+pypdf==3.17.4
+streamlit==1.35.0
 
-streamlit==1.25.0
-transformers==4.30.0
-torch==2.7.0
-numpy==1.25.2
-pandas==2.0.3
-openai-whisper==20230314
